<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.ProfileActivity">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_marginTop="15dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_profiles"/>

    <LinearLayout
        android:id="@+id/lytUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgProfile"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfile"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/user_email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/user_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfile"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text=""/>

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text=""/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytChoose_user"
        android:layout_width="match_parent"
        android:layout_below="@+id/lytUser"
        android:layout_height="150dp">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@color/app_gray_light"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            card_view:cardCornerRadius="5dp"
            android:onClick="clickTeacher">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="clickTeacher">

                <Button
                    style="@style/DashboardButton"
                    android:layout_marginTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_teacher"
                    android:onClick="clickTeacher"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/profile_teacher"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:onClick="clickTeacher"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@color/app_gray_light"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            card_view:cardCornerRadius="5dp"
            android:onClick="clickStudent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <Button
                    style="@style/DashboardButton"
                    android:background="@drawable/ic_student"
                    android:layout_marginTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:onClick="clickStudent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/profile_student"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:onClick="clickStudent"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lytInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytChoose_user"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfile"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/profile_type"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/profile_program"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/profile_skills"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text=""/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/skillsTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView1"
            android:layout_below="@+id/lytInformation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:drawSelectorOnTop="true"
            android:visibility="gone"/>










     <!--<Button
        android:id="@+id/login_btn_google"
        android:layout_below="@+id/lytUser"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_red"
        android:text="@string/app_logout"
        android:textColor="@color/app_white"/>

    <Button
        android:id="@+id/configureProfile"
        android:onClick="clickConfigureProfile"
        android:layout_below="@+id/login_btn_google"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_red"
        android:text="@string/text_configure_profile"
        android:textColor="@color/app_white"/>-->


    </RelativeLayout>

    </ScrollView>
</RelativeLayout>